# openvm-stella

./: Cargo.toml
crates/rvr/rvr-openvm-ffi-common/src/: lib.rs
crates/rvr/rvr-openvm/c/: openvm_state.h  rvr_ext_wrappers.c
crates/rvr/rvr-openvm/c/tracer/: openvm_tracer_metered.h  openvm_tracer_metered_cost.h  openvm_tracer_pure.h
crates/rvr/rvr-openvm/src/: constants.rs
crates/sdk/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm/src/arch/: vm.rs
crates/vm/src/arch/execution_mode/metered/: ctx.rs  memory_ctx.rs  memory_tracker.rs  page_tracker.rs  segment_ctx.rs
crates/vm/src/arch/rvr/: execute.rs  metered.rs
crates/vm/src/system/memory/: online.rs
extensions/algebra/rvr/ffi/common/src/: lib.rs
extensions/algebra/rvr/ffi/fp2/src/: lib.rs
extensions/algebra/rvr/ffi/modular/src/: lib.rs
extensions/algebra/rvr/src/: fp2.rs  modular.rs
extensions/pairing/rvr/ffi/src/: lib.rs
extensions/riscv/circuit/src/: README.md
extensions/riscv/rvr/c/: rv64i_phantom_callbacks.c  rv64i_phantom_callbacks.h  rv64io_callbacks.c  rv64io_callbacks.h
extensions/riscv/rvr/src/: lib.rs
stellar-proof-aggregator/: Cargo.toml  README.md  run_local.sh
stellar-proof-aggregator/contracts/stellar-verifier/: Cargo.toml
stellar-proof-aggregator/contracts/stellar-verifier/src/: lib.rs
stellar-proof-aggregator/contracts/stellar-verifier/test_snapshots/tests/: test_verify_aggregate_reports_unsupported_bn254_host_function.1.json
stellar-proof-aggregator/guest/balance-aggregator/: Cargo.toml
stellar-proof-aggregator/guest/balance-aggregator/src/: main.rs
stellar-proof-aggregator/host/: Cargo.toml
stellar-proof-aggregator/host/src/: main.rs  proof_types.rs  stellar_export.rs
