[package]
name = "stellar-aggregator-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stellar-aggregator"
path = "src/main.rs"

[dependencies]
# OpenVM SDK — proof generation and aggregation
openvm-sdk     = { path = "../../crates/sdk" }
openvm-build   = { path = "../../crates/toolchain/build" }

# Serialization / utilities
serde        = { version = "1.0", features = ["derive"] }
eyre         = "0.6"
rand         = "0.8"
sha2         = "0.10"
hex          = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
