[package]
name = "stellar-aggregated-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export-abi"]
export-abi = ["soroban-sdk/export-abi"]
testutils  = ["soroban-sdk/testutils"]

[dependencies]
# Stellar Soroban SDK — Protocol 25+ required for BN254 host functions (CAP-0074).
# Protocol 26 (CAP-0080) adds g1_msm and scalar-field arithmetic.
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
